scrapers/nus-v2/src/services/requisite-tree/antlr4/NusMods.g4
grammar NusMods;
options {
	language = TypeScript;
}

// `program_types THEN compound` is reachable through `compound` (via
// program_types_conditional), so it does not need its own top-level
// alternative. The visitor normalises away the outermost program-type wrapper.
overall: | compound EOF;

program_types:
	PROGRAM_TYPES (if_in | must_be_in) PROGRAM_TYPES_VALUE (
		COMMA PROGRAM_TYPES_VALUE
	)*;

compound:
	| '(' compound ')'
	| program_types_conditional
	| cohort_conditional
	| subject_years_conditional
	| binop
	| op;

// A program-type-gated requirement. Lifted to compound level (above binop) so
// trailing AND/OR clauses are absorbed into the gate, and so it can be nested
// or combined, e.g. `(Grad THEN X) OR (Undergrad THEN Y)`. The visitor then
// flattens redundant same-type repeats and drops the outermost wrapper (the
// ubiquitous single-program prefix that almost every prereq carries).
program_types_conditional: program_types_gate THEN compound;

// The gate may be a single program type, a disjunction of program types
// (`Undergraduate OR Graduate THEN ...`), or that disjunction parenthesised
// (`(Undergraduate OR Graduate) THEN ...`). A disjunction of IF_IN program
// types is equivalent to one IF_IN over the union of their types, which is how
// the visitor collapses it.
program_types_gate:
	'(' program_types_gate ')'
	| program_types (OR program_types)*;

// A cohort-gated requirement. The consequence is a full compound (placed above
// binop) so that trailing AND/OR clauses are absorbed into the gate, i.e.
// `COHORT_YEARS ... THEN a AND b` parses as the gate over `(a AND b)` rather
// than `(gate over a) AND b`.
cohort_conditional: cohort_years THEN compound;

// A subject-year-gated requirement. SUBJECT_YEARS uses the same S:/E: year
// bounds as COHORT_YEARS, and the planner has only the matriculation year to
// evaluate against, so it is carried as a cohort-style gate. Lifted to compound
// level (above binop) so trailing AND/OR clauses are absorbed into the gate,
// matching cohort_conditional.
subject_years_conditional: subject_years THEN compound;

binop: | op boolean_expr compound;

boolean_expr: AND | OR;

op: '(' compound ')' | primitive;

primitive:
	| program_types
	| programs
	| plan_types
	| cohort_years
	| subject_years
	| special
	| prereq
	| coreq;

programs:
	PROGRAMS programs_condition programs_values (THEN compound)?;

programs_condition:
	if_in
	| if_not_in
	| must_be_in
	| must_not_be_in;

programs_values: PROGRAMS_VALUE (COMMA PROGRAMS_VALUE)*;

plan_types:
	PLAN_TYPES plan_types_condition programs_values (
		THEN compound
	)?;

plan_types_condition:
	if_in
	| if_not_in
	| must_be_in
	| must_not_be_in;

cohort_years:
	COHORT_YEARS (
		if_in
		| if_not_in
		| must_be_in
		| must_not_be_in
	) YEARS YEARS?;

subject_years: SUBJECT_YEARS if_in YEARS YEARS?;

special: SPECIAL special_condition '"' SPECIAL_VALUE '"';

special_condition:
	if_in
	| if_not_in
	| must_be_in
	| must_not_be_in;

prereq:
	| courses
	| SUBJECTS contains_number? programs_values
	| UNITS contains_number
	| GPA contains_number;

coreq: | COREQUISITE '(' courses ')' | COREQUISITE courses;

courses: COURSES contains_number? course_items;

course_items: PROGRAMS_VALUE (COMMA PROGRAMS_VALUE)*;

// Statements

must_be_in: MUST_BE_IN contains_number?;
must_not_be_in: MUST_NOT_BE_IN contains_number?;
if_in: IF_IN;
if_not_in: IF_NOT_IN;

contains_number: '(' NUMBER ')';

// TOKENS

COMMA: ',';
LPAREN: '(';
RPAREN: ')';

// Statements

IF_IN: 'IF_IN';
MUST_BE_IN: 'MUST_BE_IN';
IF_NOT_IN: 'IF_NOT_IN';
MUST_NOT_BE_IN: 'MUST_NOT_BE_IN';
THEN: 'THEN';
AND: 'AND';
OR: 'OR';

// Constraints

PROGRAM_TYPES: 'PROGRAM_TYPES' | 'PROGRAMME_TYPES';
PROGRAM_TYPES_VALUE:
	'Undergraduate Degree'
	| 'UNDERGRADUATE DEGREE'
	| 'Graduate Degree Coursework'
	| 'GRADUATE DEGREE COURSEWORK'
	| 'Graduate Degree Research'
	| 'GRADUATE DEGREE RESEARCH'
	| 'CPE (Certificate)';

PROGRAMS: 'PROGRAMS' | 'SPECIAL_PROGRAMME';

PLAN_TYPES:
	'Minor'
	| 'MINOR'
	| '2nd Major'
	| '2ND_MAJOR'
	| 'Specialisation'
	| 'SPECIALISATION'
	| 'Special Programme'
	| 'Track';
COHORT_YEARS: 'COHORT_YEARS';

SUBJECT_YEARS: 'SUBJECT_YEARS';

SPECIAL: 'SPECIAL';

SPECIAL_VALUE:
	'ACAD_LEVEL=1'
	| 'ACAD_LEVEL=1-2'
	| 'ACAD_LEVEL=1-2-3'
	| 'ACAD_LEVEL=1-2-3-4'
	| 'ACAD_LEVEL=2'
	| 'ACAD_LEVEL=2-3'
	| 'ACAD_LEVEL=2-3-4'
	| 'ACAD_LEVEL=3'
	| 'ACAD_LEVEL=3-4'
	| 'ACAD_LEVEL=4'
	| 'SUBJECT_LEVEL=H2';

// Prerequisite

COURSES: 'COURSES' | 'MODULES';
SUBJECTS: 'SUBJECTS';
UNITS: 'UNITS';
GPA: 'GPA' | 'CAP';

// Corequisite
COREQUISITE: 'COREQUISITE';

// General
QUOTE: '"';
NUMBER: [0-9.]+;
YEARS: [SE] [:] ID;
PROGRAMS_VALUE: ID;

// Grades can contain + or -, e.g. B+/B-
fragment ID: [0-9a-zA-Z_%:/+-]+;

WS: [ \n\t\r]+ -> skip;
