scrapers/nus-v2/src/services/requisite-tree/antlr4/NusModsParser.ts
// Generated from src/services/requisite-tree/antlr4/NusMods.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { NusModsVisitor } from './NusModsVisitor';

export class NusModsParser extends Parser {
  public static readonly COMMA = 1;
  public static readonly LPAREN = 2;
  public static readonly RPAREN = 3;
  public static readonly IF_IN = 4;
  public static readonly MUST_BE_IN = 5;
  public static readonly IF_NOT_IN = 6;
  public static readonly MUST_NOT_BE_IN = 7;
  public static readonly THEN = 8;
  public static readonly AND = 9;
  public static readonly OR = 10;
  public static readonly PROGRAM_TYPES = 11;
  public static readonly PROGRAM_TYPES_VALUE = 12;
  public static readonly PROGRAMS = 13;
  public static readonly PLAN_TYPES = 14;
  public static readonly COHORT_YEARS = 15;
  public static readonly SUBJECT_YEARS = 16;
  public static readonly SPECIAL = 17;
  public static readonly SPECIAL_VALUE = 18;
  public static readonly COURSES = 19;
  public static readonly SUBJECTS = 20;
  public static readonly UNITS = 21;
  public static readonly GPA = 22;
  public static readonly COREQUISITE = 23;
  public static readonly QUOTE = 24;
  public static readonly NUMBER = 25;
  public static readonly YEARS = 26;
  public static readonly PROGRAMS_VALUE = 27;
  public static readonly WS = 28;
  public static readonly RULE_overall = 0;
  public static readonly RULE_program_types = 1;
  public static readonly RULE_compound = 2;
  public static readonly RULE_cohort_conditional = 3;
  public static readonly RULE_subject_years_conditional = 4;
  public static readonly RULE_binop = 5;
  public static readonly RULE_boolean_expr = 6;
  public static readonly RULE_op = 7;
  public static readonly RULE_primitive = 8;
  public static readonly RULE_programs = 9;
  public static readonly RULE_programs_condition = 10;
  public static readonly RULE_programs_values = 11;
  public static readonly RULE_plan_types = 12;
  public static readonly RULE_plan_types_condition = 13;
  public static readonly RULE_cohort_years = 14;
  public static readonly RULE_subject_years = 15;
  public static readonly RULE_special = 16;
  public static readonly RULE_special_condition = 17;
  public static readonly RULE_prereq = 18;
  public static readonly RULE_coreq = 19;
  public static readonly RULE_courses = 20;
  public static readonly RULE_course_items = 21;
  public static readonly RULE_must_be_in = 22;
  public static readonly RULE_must_not_be_in = 23;
  public static readonly RULE_if_in = 24;
  public static readonly RULE_if_not_in = 25;
  public static readonly RULE_contains_number = 26;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'overall',
    'program_types',
    'compound',
    'cohort_conditional',
    'subject_years_conditional',
    'binop',
    'boolean_expr',
    'op',
    'primitive',
    'programs',
    'programs_condition',
    'programs_values',
    'plan_types',
    'plan_types_condition',
    'cohort_years',
    'subject_years',
    'special',
    'special_condition',
    'prereq',
    'coreq',
    'courses',
    'course_items',
    'must_be_in',
    'must_not_be_in',
    'if_in',
    'if_not_in',
    'contains_number',
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "','",
    "'('",
    "')'",
    "'IF_IN'",
    "'MUST_BE_IN'",
    "'IF_NOT_IN'",
    "'MUST_NOT_BE_IN'",
    "'THEN'",
    "'AND'",
    "'OR'",
    undefined,
    undefined,
    undefined,
    undefined,
    "'COHORT_YEARS'",
    "'SUBJECT_YEARS'",
    "'SPECIAL'",
    undefined,
    undefined,
    "'SUBJECTS'",
    "'UNITS'",
    undefined,
    "'COREQUISITE'",
    "'\"'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    'COMMA',
    'LPAREN',
    'RPAREN',
    'IF_IN',
    'MUST_BE_IN',
    'IF_NOT_IN',
    'MUST_NOT_BE_IN',
    'THEN',
    'AND',
    'OR',
    'PROGRAM_TYPES',
    'PROGRAM_TYPES_VALUE',
    'PROGRAMS',
    'PLAN_TYPES',
    'COHORT_YEARS',
    'SUBJECT_YEARS',
    'SPECIAL',
    'SPECIAL_VALUE',
    'COURSES',
    'SUBJECTS',
    'UNITS',
    'GPA',
    'COREQUISITE',
    'QUOTE',
    'NUMBER',
    'YEARS',
    'PROGRAMS_VALUE',
    'WS',
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    NusModsParser._LITERAL_NAMES,
    NusModsParser._SYMBOLIC_NAMES,
    [],
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return NusModsParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return 'NusMods.g4';
  }

  // @Override
  public get ruleNames(): string[] {
    return NusModsParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return NusModsParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(NusModsParser._ATN, this);
  }
  // @RuleVersion(0)
  public overall(): OverallContext {
    let _localctx: OverallContext = new OverallContext(this._ctx, this.state);
    this.enterRule(_localctx, 0, NusModsParser.RULE_overall);
    try {
      this.state = 63;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 0, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1);
          // tslint:disable-next-line:no-empty
          {
          }
          break;

        case 2:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 55;
            this.program_types();
            this.state = 56;
            this.match(NusModsParser.THEN);
            this.state = 57;
            this.compound();
            this.state = 58;
            this.match(NusModsParser.EOF);
          }
          break;

        case 3:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 60;
            this.compound();
            this.state = 61;
            this.match(NusModsParser.EOF);
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public program_types(): Program_typesContext {
    let _localctx: Program_typesContext = new Program_typesContext(this._ctx, this.state);
    this.enterRule(_localctx, 2, NusModsParser.RULE_program_types);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 65;
        this.match(NusModsParser.PROGRAM_TYPES);
        this.state = 68;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case NusModsParser.IF_IN:
            {
              this.state = 66;
              this.if_in();
            }
            break;
          case NusModsParser.MUST_BE_IN:
            {
              this.state = 67;
              this.must_be_in();
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
        this.state = 70;
        this.match(NusModsParser.PROGRAM_TYPES_VALUE);
        this.state = 75;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === NusModsParser.COMMA) {
          {
            {
              this.state = 71;
              this.match(NusModsParser.COMMA);
              this.state = 72;
              this.match(NusModsParser.PROGRAM_TYPES_VALUE);
            }
          }
          this.state = 77;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public compound(): CompoundContext {
    let _localctx: CompoundContext = new CompoundContext(this._ctx, this.state);
    this.enterRule(_localctx, 4, NusModsParser.RULE_compound);
    try {
      this.state = 87;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1);
          // tslint:disable-next-line:no-empty
          {
          }
          break;

        case 2:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 79;
            this.match(NusModsParser.LPAREN);
            this.state = 80;
            this.compound();
            this.state = 81;
            this.match(NusModsParser.RPAREN);
          }
          break;

        case 3:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 83;
            this.cohort_conditional();
          }
          break;

        case 4:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 84;
            this.subject_years_conditional();
          }
          break;

        case 5:
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 85;
            this.binop();
          }
          break;

        case 6:
          this.enterOuterAlt(_localctx, 6);
          {
            this.state = 86;
            this.op();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public cohort_conditional(): Cohort_conditionalContext {
    let _localctx: Cohort_conditionalContext = new Cohort_conditionalContext(this._ctx, this.state);
    this.enterRule(_localctx, 6, NusModsParser.RULE_cohort_conditional);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 89;
        this.cohort_years();
        this.state = 90;
        this.match(NusModsParser.THEN);
        this.state = 91;
        this.compound();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public subject_years_conditional(): Subject_years_conditionalContext {
    let _localctx: Subject_years_conditionalContext = new Subject_years_conditionalContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 8, NusModsParser.RULE_subject_years_conditional);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 93;
        this.subject_years();
        this.state = 94;
        this.match(NusModsParser.THEN);
        this.state = 95;
        this.compound();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public binop(): BinopContext {
    let _localctx: BinopContext = new BinopContext(this._ctx, this.state);
    this.enterRule(_localctx, 10, NusModsParser.RULE_binop);
    try {
      this.state = 102;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1);
          // tslint:disable-next-line:no-empty
          {
          }
          break;

        case 2:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 98;
            this.op();
            this.state = 99;
            this.boolean_expr();
            this.state = 100;
            this.compound();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public boolean_expr(): Boolean_exprContext {
    let _localctx: Boolean_exprContext = new Boolean_exprContext(this._ctx, this.state);
    this.enterRule(_localctx, 12, NusModsParser.RULE_boolean_expr);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 104;
        _la = this._input.LA(1);
        if (!(_la === NusModsParser.AND || _la === NusModsParser.OR)) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public op(): OpContext {
    let _localctx: OpContext = new OpContext(this._ctx, this.state);
    this.enterRule(_localctx, 14, NusModsParser.RULE_op);
    try {
      this.state = 111;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case NusModsParser.LPAREN:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 106;
            this.match(NusModsParser.LPAREN);
            this.state = 107;
            this.compound();
            this.state = 108;
            this.match(NusModsParser.RPAREN);
          }
          break;
        case NusModsParser.EOF:
        case NusModsParser.RPAREN:
        case NusModsParser.AND:
        case NusModsParser.OR:
        case NusModsParser.PROGRAM_TYPES:
        case NusModsParser.PROGRAMS:
        case NusModsParser.PLAN_TYPES:
        case NusModsParser.COHORT_YEARS:
        case NusModsParser.SUBJECT_YEARS:
        case NusModsParser.SPECIAL:
        case NusModsParser.COURSES:
        case NusModsParser.SUBJECTS:
        case NusModsParser.UNITS:
        case NusModsParser.GPA:
        case NusModsParser.COREQUISITE:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 110;
            this.primitive();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public primitive(): PrimitiveContext {
    let _localctx: PrimitiveContext = new PrimitiveContext(this._ctx, this.state);
    this.enterRule(_localctx, 16, NusModsParser.RULE_primitive);
    try {
      this.state = 122;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1);
          // tslint:disable-next-line:no-empty
          {
          }
          break;

        case 2:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 114;
            this.program_types();
          }
          break;

        case 3:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 115;
            this.programs();
          }
          break;

        case 4:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 116;
            this.plan_types();
          }
          break;

        case 5:
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 117;
            this.cohort_years();
          }
          break;

        case 6:
          this.enterOuterAlt(_localctx, 6);
          {
            this.state = 118;
            this.subject_years();
          }
          break;

        case 7:
          this.enterOuterAlt(_localctx, 7);
          {
            this.state = 119;
            this.special();
          }
          break;

        case 8:
          this.enterOuterAlt(_localctx, 8);
          {
            this.state = 120;
            this.prereq();
          }
          break;

        case 9:
          this.enterOuterAlt(_localctx, 9);
          {
            this.state = 121;
            this.coreq();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public programs(): ProgramsContext {
    let _localctx: ProgramsContext = new ProgramsContext(this._ctx, this.state);
    this.enterRule(_localctx, 18, NusModsParser.RULE_programs);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 124;
        this.match(NusModsParser.PROGRAMS);
        this.state = 125;
        this.programs_condition();
        this.state = 126;
        this.programs_values();
        this.state = 129;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === NusModsParser.THEN) {
          {
            this.state = 127;
            this.match(NusModsParser.THEN);
            this.state = 128;
            this.compound();
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public programs_condition(): Programs_conditionContext {
    let _localctx: Programs_conditionContext = new Programs_conditionContext(this._ctx, this.state);
    this.enterRule(_localctx, 20, NusModsParser.RULE_programs_condition);
    try {
      this.state = 135;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case NusModsParser.IF_IN:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 131;
            this.if_in();
          }
          break;
        case NusModsParser.IF_NOT_IN:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 132;
            this.if_not_in();
          }
          break;
        case NusModsParser.MUST_BE_IN:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 133;
            this.must_be_in();
          }
          break;
        case NusModsParser.MUST_NOT_BE_IN:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 134;
            this.must_not_be_in();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public programs_values(): Programs_valuesContext {
    let _localctx: Programs_valuesContext = new Programs_valuesContext(this._ctx, this.state);
    this.enterRule(_localctx, 22, NusModsParser.RULE_programs_values);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 137;
        this.match(NusModsParser.PROGRAMS_VALUE);
        this.state = 142;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === NusModsParser.COMMA) {
          {
            {
              this.state = 138;
              this.match(NusModsParser.COMMA);
              this.state = 139;
              this.match(NusModsParser.PROGRAMS_VALUE);
            }
          }
          this.state = 144;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public plan_types(): Plan_typesContext {
    let _localctx: Plan_typesContext = new Plan_typesContext(this._ctx, this.state);
    this.enterRule(_localctx, 24, NusModsParser.RULE_plan_types);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 145;
        this.match(NusModsParser.PLAN_TYPES);
        this.state = 146;
        this.plan_types_condition();
        this.state = 147;
        this.programs_values();
        this.state = 150;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === NusModsParser.THEN) {
          {
            this.state = 148;
            this.match(NusModsParser.THEN);
            this.state = 149;
            this.compound();
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public plan_types_condition(): Plan_types_conditionContext {
    let _localctx: Plan_types_conditionContext = new Plan_types_conditionContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 26, NusModsParser.RULE_plan_types_condition);
    try {
      this.state = 156;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case NusModsParser.IF_IN:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 152;
            this.if_in();
          }
          break;
        case NusModsParser.IF_NOT_IN:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 153;
            this.if_not_in();
          }
          break;
        case NusModsParser.MUST_BE_IN:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 154;
            this.must_be_in();
          }
          break;
        case NusModsParser.MUST_NOT_BE_IN:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 155;
            this.must_not_be_in();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public cohort_years(): Cohort_yearsContext {
    let _localctx: Cohort_yearsContext = new Cohort_yearsContext(this._ctx, this.state);
    this.enterRule(_localctx, 28, NusModsParser.RULE_cohort_years);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 158;
        this.match(NusModsParser.COHORT_YEARS);
        this.state = 163;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case NusModsParser.IF_IN:
            {
              this.state = 159;
              this.if_in();
            }
            break;
          case NusModsParser.IF_NOT_IN:
            {
              this.state = 160;
              this.if_not_in();
            }
            break;
          case NusModsParser.MUST_BE_IN:
            {
              this.state = 161;
              this.must_be_in();
            }
            break;
          case NusModsParser.MUST_NOT_BE_IN:
            {
              this.state = 162;
              this.must_not_be_in();
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
        this.state = 165;
        this.match(NusModsParser.YEARS);
        this.state = 167;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === NusModsParser.YEARS) {
          {
            this.state = 166;
            this.match(NusModsParser.YEARS);
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public subject_years(): Subject_yearsContext {
    let _localctx: Subject_yearsContext = new Subject_yearsContext(this._ctx, this.state);
    this.enterRule(_localctx, 30, NusModsParser.RULE_subject_years);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 169;
        this.match(NusModsParser.SUBJECT_YEARS);
        this.state = 170;
        this.if_in();
        this.state = 171;
        this.match(NusModsParser.YEARS);
        this.state = 173;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === NusModsParser.YEARS) {
          {
            this.state = 172;
            this.match(NusModsParser.YEARS);
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public special(): SpecialContext {
    let _localctx: SpecialContext = new SpecialContext(this._ctx, this.state);
    this.enterRule(_localctx, 32, NusModsParser.RULE_special);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 175;
        this.match(NusModsParser.SPECIAL);
        this.state = 176;
        this.special_condition();
        this.state = 177;
        this.match(NusModsParser.QUOTE);
        this.state = 178;
        this.match(NusModsParser.SPECIAL_VALUE);
        this.state = 179;
        this.match(NusModsParser.QUOTE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public special_condition(): Special_conditionContext {
    let _localctx: Special_conditionContext = new Special_conditionContext(this._ctx, this.state);
    this.enterRule(_localctx, 34, NusModsParser.RULE_special_condition);
    try {
      this.state = 185;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case NusModsParser.IF_IN:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 181;
            this.if_in();
          }
          break;
        case NusModsParser.IF_NOT_IN:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 182;
            this.if_not_in();
          }
          break;
        case NusModsParser.MUST_BE_IN:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 183;
            this.must_be_in();
          }
          break;
        case NusModsParser.MUST_NOT_BE_IN:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 184;
            this.must_not_be_in();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
